# BTR_pipeline

./: .gitignore  README.md  analyse_rf.py  batch_runner.py  checking_gpu.py  checking_things.py  clustering_metrics.py  comparing.py  convert_files.py  datasets and runs.xlsx  dimensionality_red.py  feature_selection.py  final_runs_PC.csv  ion_image_liver_feature.py  ion_image_mosaic_feature.py  liver_ion_image.py  logger.py  old_prep_code.py  plot_ion_images.py  preprocessing.py  preprocessing_w_matrix.py  pyproject.toml  quick_ion_image.py  spectra_analysis.py  trying.py  trying_prep.py
results/: experiment_results.csv  filtered_mz_values.csv  liver_experiment_results.csv
results/hippocampus_PC/: hippocampus_OMP_full_spatial_pca10_k4_full_spatial_pca_results.csv
results/hippocampus_PC/hippocampus_OMP_nmf20_k5/: umap_results.csv
results/hippocampus_PC/hippocampus_OMP_spca10_k4/: spatial_pca_explained_variance.csv
results/hippocampus_PC/hippocampus_OMP_spca10_k4_smoothing/: spatial_pca_explained_variance.csv
results/hippocampus_tic_omp/: filtered_mz_values.csv
results/hippocampus_tic_omp/hdbscan_40min_5x5_smoothing/: umap_results.csv
results/hippocampus_tic_omp/hdbscan_700_000_5x5_smoothing/: clustering_metrics_hdbscan_700_000_5x5_smoothing.txt  umap_results.csv
results/hippocampus_tic_omp/kmeans_3_5x5_smoothing/: clustering_metrics_kmeans_3_5x5_smoothing.txt  umap_results.csv
results/hippocampus_tic_omp/kmeans_5_5x5_smoothing/: clustering_metrics_kmeans_5_5x5_smoothing.txt  umap_results.csv
results/hippocampus_tic_omp/kmeans_5_no_smoothing/: clustering_metrics_kmeans_5_no_smoothing.txt  umap_results.csv
results/small_computer_xenium_omp/: binned_mz_values.csv  peak_mz_values.csv
results/xenium_tic_omp/: binned_mz_values.csv  filtered_mz_values.csv  peak_mz_values.csv
scripts/: convert_all_zep.py  debug_mnf.py  diagnose_spatialdata.py  interactive_spectrum.py  test_thyra_conversion.py
(+542 files in other folders)
