[project]
name = "btr-pipeline-code"
version = "0.1.0"
description = ""
authors = [
    {name = "ioanasarah", email = "ioana.aizic@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = ["statsmodels (>=0.14.6,<0.15.0)", "torch (>=2.5.1,<3.0.0)", "spatialdata (>=0.7.2,<0.8.0)", "matplotlib (>=3.10.8,<4.0.0)", "matchms (>=0.32.0,<0.33.0)", "scikit-learn (>=1.8.0,<2.0.0)", "umap-learn (>=0.5.11,<0.6.0)", "plotly (>=6.6.0,<7.0.0)", "thyra (>=1.20.2)", "defusedxml (>=0.7.1,<0.8.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=2.0.0"
spatialdata = ">=0.7.2,<0.8.0"
matchms = ">=0.14.0"
matplotlib = ">=3.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
pandas = ">=2.0.0"
umap-learn = ">=0.5.0"
plotly = ">=5.0.0"
scipy = ">=1.7.0"
setuptools = "69.5.1"
torch = {source = "pytorch"}
thyra = {version = ">=1.20.2", python = ">=3.11,<3.13"}
defusedxml = ">=0.7.1,<0.8.0"
statsmodels = ">=0.14.6,<0.15.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

